--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,7 +54,12 @@ header {
   left: 0;
   width: 300px;
   height: 100vh;
-  background: rgba(255, 255, 255, 0.95);
+    background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 40%,
+    rgba(255, 255, 255, 0.5) 100%
+  );
   display: flex;
   flex-direction: column;
   align-items: center;
