--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -1,6 +1,6 @@
 <!-- Sidebar Navigation -->
 <nav class="sidebar" aria-label="Main navigation">
-    <h2><a href="/index.html">Sudarson Nanthacoumarane</a></h2>
+    <h2><a href="/index.html#home">Sudarson Nanthacoumarane</a></h2>
     <a href="/index.html#about" class="sidebar-link"><i class="fas fa-user"></i> About</a>
     <a href="/index.html#portfolio" class="sidebar-link"><i class="fas fa-image"></i> Portfolio</a>
     <a href="/index.html#services" class="sidebar-link"><i class="fas fa-cogs"></i> Services</a>
