--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -237,6 +237,11 @@ section {
 
 .about-text {
   flex: 1;
+  text-align: justify;
+  text-justify: inter-word;
+}
+.about-text p{
+  margin-top: 1.5rem;
 }
 
 /* Portfolio and Services */
