--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -2,7 +2,7 @@
 <nav class="sidebar" aria-label="Main navigation">
     <h3><a href="/index.html#home">Sudarson Nanthacoumarane</a></h3>
     <a href="/index.html#about" class="sidebar-link"><i class="fas fa-user"></i> <span>About</span></a>
-    <a href="/index.html#portfolio" class="sidebar-link"><i class="fas fa-image"></i> <span>Portfolio</span></a>
+    <a href="/index.html#portfolio" class="sidebar-link"><i class="fa-solid fa-compass-drafting"></i> <span>Portfolio</span></a>
     <a href="/index.html#services" class="sidebar-link"><i class="fas fa-cogs"></i> <span>Services</span></a>
     <a href="/index.html#contact" class="sidebar-link"><i class="fas fa-envelope"></i> <span>Contact</span></a>
 </nav>
