--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -6,13 +6,16 @@ body {
   overflow-x: hidden;
 }
 
-/* Sidebar styling will be injected by main.css/sidebar.html */
-
 .main-content {
   /*
   margin-left: 100px;
   width: calc(100% - 200px);
   */
+  width: 100%;
+}
+[data-page="in-progress"] .main-content {
+  justify-content: center;
+  align-items: center;
 }
 
 /* Container for content */
@@ -20,11 +23,19 @@ body {
   width: 100%;
   margin: 0 auto;
   padding: 20px 20px;
+  min-height: calc(100vh - 100px);
 }
+
+@media (max-width: 800px) {
+  .content-wrapper {
+  min-height: calc(100vh - 160px);
+  }
+}
+
 
 /* Carousel styling */
 .project-carousel {
-  margin: 1rem auto;
+  margin: 0rem auto;
   position: relative;
   overflow: hidden;
 }
@@ -43,7 +54,7 @@ body {
 
 .swiper-slide {
   flex-shrink: 0;
-  width:70%; /* Optional: or set to 100% or 80% */
+  width: 70%; /* Optional: or set to 100% or 80% */
   /*box-sizing: border-box;*/
   max-width: 400px;
   padding: 0 10px;
@@ -89,7 +100,7 @@ body {
   margin: 0 auto;
   text-align: justify;
   text-justify: inter-word;
-  padding: 5% 3% 5% 3%;
+  padding: 2% 3% 5% 3%;
   width: 100%;
 }
 
@@ -119,6 +130,29 @@ body {
   gap: 0.25rem;
 }
 
+.company-description {
+  /*font-style: italic;*/
+  font-weight: 500;
+  /*font-family: 'Georgia', serif;*/
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  padding: 8px 12px;
+  border-left: 5px solid #c0392b; /* Wine red accent */
+  color: #333;
+  margin-top: 0.5rem;
+
+    /* Animate reveal from left using clip-path */
+  animation: clipReveal 1.2s ease-out forwards;
+  clip-path: inset(0 100% 0 0); /* Initially hidden from right */
+}
+
+@keyframes clipReveal {
+  to {
+    clip-path: inset(0 0 0 0); /* Fully visible */
+  }
+}
+
+
 /* On larger screens, show label and content inline */
 @media (min-width: 768px) {
   .info-line {
@@ -135,7 +169,7 @@ body {
 
 .highlight {
   font-weight: bold;
-  color: #c0392b; Dark red highlight */
+  color: #c0392b; /*Dark red highlight */
   /*color: #0956c3; */
 }
 
@@ -152,6 +186,7 @@ body {
   background: #f5f5f5;
   transition: all 0.3s ease;
 }
+
 
 .back-link:hover {
   background: #111;
